rayt-demo/configuration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: configservice
  namespace: game
  labels:
    app: configservice
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: configservice
  type: ClusterIP
